--- a/src/includes/nav.html
+++ b/src/includes/nav.html
@@ -27,7 +27,7 @@
     <!-- our own css -->
     <link rel="stylesheet" href="css/styles.css" />
 
-    <title>P curiosity lab</title>  
+    <title>Kech Montana</title>  
   </head>
   <body>
   
