--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -1,5 +1,95 @@
 
+    <footer class="footer">
+
+        <div class="footer-container u-mt-b">
+            <div class="footer__info">
+                 <a href="index.html"><img src="assets/logo/logo-red.png" alt="kech montana logo" class="footer__info-logo"></a>
+                <div class="footer__info-contact mt-4">
+                    <h3 class="footer__info-email">
+                        <b>Email:</b>
+                        <span class="secondary-variant">contact@kechmontana.com</span>
+                    </h3>
+                    <h3 class="footer__info-phone">
+                        <b>Phone:</b>
+                        <span class="secondary-variant">+212-661-000-000</span>
+                    </h3>
+                    <div class="footer__info-email-input mt-4">
+                        <input type="email" name="email" id="email-input" placeholder="Email">
+                        <img src="assets/icons/arrow.svg" alt="arrow icon" class="footer__info-email-input-icon">
+                    </div>
+                    <!-- <ul class="footer__info-social list-unstyled mt-4">
+                        <li class="footer__info-icon">
+                            <a href="#"><img src="images/twitter.png" alt="twitter" class="footer__info-icon-img"></a>
+                        </li>
+                        <li class="footer__info-icon">
+                            <a href="#"><img src="images/facebook.png" alt="facebook" class="footer__info-icon-img"></a>
+                        </li>
+                        <li class="footer__info-icon">
+                            <a href="#"><img src="images/instagram.png" alt="instagram" class="footer__info-icon-img"></a>
+                        </li>
+                        <li class="footer__info-icon">
+                            <a href="#"><img src="images/linkdin.png" alt="linkdin" class="footer__info-icon-img"></a>
+                        </li>
+                        <li class="footer__info-icon">
+                            <a href="#"><img src="images/youtube.png" alt="youtube" class="footer__info-icon-img"></a>
+                        </li>
+                    </ul> -->
+                </div>
+            </div>
+            <ul class="footer__useful list-unstyled">
+                <li class="footer__useful-item">
+                    <a href="" class="footer__useful-links footer__useful-links-heading">À propos de nous</a>
+                </li>
+                <li class="footer__useful-item">
+                    <a href="site.html" class="footer__useful-links">Site</a>
+                </li>
+                <li class="footer__useful-item">
+                    <a href="" class="footer__useful-links">Contact</a>
+                </li>
+                <li class="footer__useful-item">
+                    <a href="" class="footer__useful-links">Reservé</a>
+                </li>
+            </ul>
     
+            <ul class="footer__useful list-unstyled">
+                <li class="footer__useful-item">
+                    <a href="" class="footer__useful-links footer__useful-links-heading">Kech montana</a>
+                </li>
+                <li class="footer__useful-item">
+                    <a href="chambres.html" class="footer__useful-links">Chambres</a>
+                </li>
+                <li class="footer__useful-item">
+                    <a href="restauration.html" class="footer__useful-links">Restauration</a>
+                </li>
+                <li class="footer__useful-item">
+                    <a href="" class="footer__useful-links">Plan & Acces</a>
+                </li>
+            </ul>
+            <ul class="footer__useful list-unstyled">
+                <li class="footer__useful-item">
+                    <a href="" class="footer__useful-links footer__useful-links-heading">Evenements</a>
+                </li>
+                <li class="footer__useful-item">
+                    <a href="" class="footer__useful-links">Photos & Video</a>
+                </li>
+                <li class="footer__useful-item">
+                    <a href="bienetre.html" class="footer__useful-links">Bien Etre & Activités</a>
+                </li>
+                <li class="footer__useful-item">
+                    <a href="evenements.html" class="footer__useful-links">Evenements</a>
+                </li>
+            </ul>
+        </div>
+    
+    </footer>
+    <div class="subfooter">
+        <h5 class="text-muted subfooter__copyright">Copyright © 2022 Tous les droits sont réservés <span class="secondary-variant" style="font-weight: 600;">Kech montana</span></h5>
+        <div class="subfooter__terms">
+            <h5 class="text-muted subfooter__tos">Terms of use</h5>
+            <span class="subfooter-saperator"></span>
+            <h5 class="text-muted subfooter__privacy">Privacy policy</h5>
+        </div>
+    </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/typed-js/typed.min.js"></script>
     <script src="https://kit.fontawesome.com/ecadb3d96a.js" crossorigin="anonymous"></script>
@@ -19,6 +109,7 @@
     <script src="js/owl-carousel/owl.carousel.min.js"></script>
     <!-- onscroll animation library -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script>
         AOS.init(
           {
