--- a/src/includes/nav.html
+++ b/src/includes/nav.html
@@ -22,12 +22,14 @@
 
     <!-- onscroll animation library -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css" />
     <!-- usefull utility classes -->
     <link rel="stylesheet" href="css/util.css">
     <!-- our own css -->
     <link rel="stylesheet" href="css/styles.css" />
 
-    <title>Kech Montana</title>  
+    <title>Kech Montana</title>
   </head>
   <body>
   
