--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -2,10 +2,13 @@
 $color-white: #fff;
 $color-black: #000;
 $color-lighter-black: #051441;
-$primary: #10266b;
+
+$primary: #D2C5AE;
 $primary-variant: #677294;
-$secondary: #4B53D8;
-$secondary-variant:#32C2EC;
+
+$secondary: rgb(103, 90, 81);
+$secondary-variant:rgb(75, 65, 58);
+
 $tertiary: #0054f9;
 $tertiary-variant: #0000FF;
 $opacity:#F4F5F8;
