--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -11,6 +11,10 @@
     margin-bottom: 1.5rem !important;
 }
 
+.u-mb-2 {
+    margin-bottom: 2rem !important;
+}
+
 .u-mb-m {
     margin-bottom: 4rem !important;
 }
@@ -136,4 +140,22 @@ a {
 
 .position-object-right{
     object-position: right;
+}
+
+.text-italic{
+    font-style: italic !important;
+}
+
+.fw-300{
+    font-weight: 300 !important;
+}
+.fw-400{
+    font-weight: 300 !important;
+}
+.fw-500{
+    font-weight: 300 !important;
+}
+
+.p-8{
+    padding: 8rem !important;
 }
