--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -19,3 +19,8 @@
 
 
 @import "pages/home";
+@import "pages/site";
+@import "pages/chambres";
+@import "pages/restaurant";
+@import "pages/bienetre";
+@import "pages/evenements";
